@@ -87,7 +87,12 @@
 			<ol id="tx-mnogosearch-result" type="1" start="###SEARCH_RESULTS_FIRST###">
 			<!-- ###SEARCH_RESULTS_RESULT### begin -->
 				<li>
-					<h3><a href="###SEARCH_RESULTS_RESULT_URL###">###SEARCH_RESULTS_RESULT_TITLE###</a></h3>
+					<h3>
+						<!-- ###ICON### begin -->
+						<img src="###ICON_SRC###" alt="" />
+						<!-- ###ICON### end -->
+						<a href="###SEARCH_RESULTS_RESULT_URL###">###SEARCH_RESULTS_RESULT_TITLE###</a>
+					</h3>
 					<p class="tx-mnogosearch-result-excerpt">
 						###SEARCH_RESULTS_RESULT_EXCERPT###
 					</p>
